crates/reinhardt-pages/tests/ui/style/fail/standalone_style.rs
use reinhardt_pages::style;

fn main() {
	let _ = style! {
		.card {
			color: red;
		}
	};
}
